[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tells"
version = "0.1.0"
description = "Training environments and learning pipelines for communications-denied multi-agent experiments."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "imageio>=2.34",
  "matplotlib>=3.8",
  "numpy<2",
  "opencv-python-headless>=4.10",
  "PyYAML>=6.0",
  "ray>=2.48.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
marl = [
  "gymnasium>=0.29,<1.1",
  "hydra-core>=1.3,<2",
  "mpe2>=0.0.1",
  "pettingzoo>=1.24,<2",
  "pygame>=2.5",
  "ray[rllib]>=2.20,<3",
  "torch>=2.2,<3",
]
belief = [
  "munch>=4.0",
  "pytorch-lightning>=2.2,<3",
  "tensorboard>=2.16",
  "torch>=2.2,<3",
  "torchvision>=0.17",
]
usv = [
  "gurobipy>=11,<13",
  "gymnasium>=0.29,<1.1",
  "stable-baselines3>=2.2,<3",
  "torch>=2.2,<3",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = [
  "controllers*",
  "envs*",
  "evals*",
  "learn*",
  "tells_environment_dynamics*",
  "util*",
]
namespaces = true
