[project]
name = "tells"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "click<8.3",
    "control>=0.10.2",
    "gymnasium>=0.28.1",
    "hydra-core>=1.3.2",
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "mpe2>=1.1.0",
    "munch>=4.0.0",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.13.0.92",
    "pettingzoo>=1.24.3",
    "pybullet==3.2.7 ; sys_platform == 'linux'",
    "pygame>=2.6.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ray[rllib]==2.38.0",
    "scipy>=1.15.3",
    "stable-baselines3>=2.3.2",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "transforms3d>=0.4.2",
]
