[project]
name = "tells"
version = "0.1.0"
description = "Multi-agent reinforcement learning experiments for predator-prey, drones, and belief models."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "gymnasium>=1.1,<1.3",
    "hydra-core>=1.3,<2",
    "imageio>=2.37,<3",
    "matplotlib>=3.10,<4",
    "mpe2>=0.0.1",
    "munch>=4,<5",
    "numpy>=2.2,<2.3",
    "omegaconf>=2.3,<3",
    "opencv-python-headless>=4.12,<5",
    "pettingzoo>=1.26,<2",
    "pygame>=2.6,<3",
    "pytorch-lightning>=2.6,<3",
    "pyyaml>=6,<7",
    "ray[rllib]>=2.40,<3",
    "scipy>=1.15,<2",
    "stable-baselines3>=2.8,<3",
    "tensorboard>=2.20,<3",
    "tensorboardx>=2.6,<3",
    "torch>=2.5,<3",
    "torchaudio>=2.5,<3",
    "torchvision>=0.20,<1",
]

[project.optional-dependencies]
drones = [
    "control>=0.10.2",
    "gym-pybullet-drones",
    "pybullet>=3.2.7,<4",
    "transforms3d>=0.4,<0.5",
]
usv = [
    "gurobipy>=12,<13",
]

[tool.uv.sources]
gym-pybullet-drones = { path = "external/pybullet-drones", editable = true }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
